# ZKP-FL

./: README.md  REAMDE.md  cnn.sh  cnn_back.sh  cnn_back2.sh  cnn_back3.sh  cnn_back4.sh  cnn_back5.sh  conv_for.sh  z-irisrun.sh  z-pricerun.sh
cnn/: cnn.zok  cnn_back2.py  cnn_back3.py  cnn_back4.py  cnn_back5.py  cnn_sim_zok.py  conv_back.py  for2back.py  in.json  mnist2json.py
cnn/cnn_back/: cnn_back.zok  in.json
cnn/cnn_back2/: cnn_back2.zok  in.json
cnn/cnn_back3/: cnn_back3.zok  in.json
cnn/cnn_back4/: cnn_back4.zok  in.json
cnn/cnn_back5/: cnn_back5.zok  in.json
cnn/cnn_for/: conv_for.zok
contract/: Cargo.toml  aggregation.sh  deploy.sh  lib-vec.rs
iris/: bigtest.py  cli0.txt  cli1.txt  d_in_d_out.json  edit.py  genorigininput.py  getnextinput.py  init0.txt  sigma.py
iris/func1/: main.zok
price/: edit.py  getnextinput.py  sigma.py
price/func1/: main.zok
